# jogs

./: .gitignore  Cargo.toml  README.md  about.toml  build.sh  jogs.typ
src/: lib.rs
typst-package/: README.md  jogs.wasm  lib.typ  typst.toml
typst-package/examples/: fib.typ
