[package]
name = "jogs"
version = "0.2.3"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
[dependencies]
anyhow = "1"
ciborium = "0.2.1"
quickjs-wasm-rs = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.12"
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
